--- a/CSS/vegetables.css
+++ b/CSS/vegetables.css
@@ -181,17 +181,17 @@
     }
 
     .venue-cont .img1{
-      background-image: url(../Images/nuwaraeliya.jpg);
+      background-image: url(../Images/dole.jpg);
       background-size: cover;
       background-position: center;
     }
     .venue-cont .img2{
-      background-image: url(../Images/badulla.jpg);
+      background-image: url(../Images/yas.jpg);
       background-size: cover;
       background-position: center;
     }
     .venue-cont .img3{
-      background-image: url(../Images/anuradhapura.jpg);
+      background-image: url(../Images/tropikal.jpg);
       background-size: cover;
       background-position: center;
     }
