--- a/CSS/index.css
+++ b/CSS/index.css
@@ -507,184 +507,49 @@ font-weight: 400;
     }
 }
 
-/*ipad mini*/
 
-@media (max-width:768px){
+@media (max-width:820px) and (min-width:768px){
   .feature{
-    height: 80vh;
+    height: 68vh;
    
   }
 
-  .feature:hover{
-    border-radius: 0px;
-  }
-  .feature-section{
-    float: none;
-    width: 55%;
-    margin-top: -7vh;
-    text-align: center;
-    margin-right: 100%;
-    
-  }
 
   .image-section{
     float: none;
     width: 50%;
-    margin-left: 10%;
-    height: 40vh;
-    margin-top: 50px;
+    margin-left:8%;
   }
 
   .feature-section .title{
-    margin-left: 20%;
-    text-align:center;
+    margin-right: -13%;
   }
   
-  .feature-section .content{
-    margin-top: 20px;
-    color: #2d2c2c;
-  }
   
   .feature-section .content p{
     margin-top: 3px;
     line-height: 1.4;
-    margin-right:10%;
-    margin-left: 30%;
-    text-align:center;
+    margin-right:-30%;
+    text-align: justify;
   }
   
    .feature-section .content .button{
       margin-top: -5px;
       margin-bottom: 25px;
-      margin-right: 0px;
+      margin-right: -130px;
     }
 
     .feature-section .content ul{
-      margin-right: 0%;
+      margin-right: -30%;
     }
 
     .content h3{
-      margin-left: 30%;
+      margin-right: -20%;
     }
 }
 
-/*iphone SE*/
 
-@media (max-width:375px)  {
-  .feature{
-    height: 125vh;
-   
-  }
 
-  .image-section{
-    margin-left: -2%;
-  }
-
-  .feature-section .title{
-    margin-left: 10%;
-    text-align:center;
-  }
-
-  .content h3{
-    margin-left: 10%;
-  }
-
-  .feature-section .content p{
-    margin-top: 3px;
-    line-height: 1.4;
-    margin-right:10%;
-    margin-left: 8%;
-    text-align:center;
-  }
-
-}
-
-/*iphone 12 pro*/
-
-@media (max-width:390px)  {
-  .feature{
-    height: 90vh;
-   
-  }
-
-  .image-section{
-    margin-left: -8%;
-  }
-
-  .feature-section .content .button{
-    margin-right: 30%;
-  }
-
-  .feature-section .content p{
-    margin-left: -2%;
-  }
-
-}
-
-/*surface pro*/
-
-@media (max-width:912px){
-
-  .feature{
-    height: 50vh;
-   
-  }
-
-  .image-section{
-    margin-left: 8%;
-  }
-
-  .feature-section .content .button{
-    margin-right: 10%;
-  }
-
-  .feature-section .content p{
-    margin-left: 0%;
-  }
-
-}
-
-/*surface duo*/
-
-@media (max-width:540px){
-
-  .feature{
-    height: 100vh;
-   
-  }
-
-  .image-section{
-    margin-left: 8%;
-  }
-
-  .feature-section .content .button{
-    margin-right: -15%;
-  }
-
-  .feature-section .content p{
-    margin-right: -30%;
-  }
-
-  .content h3{
-    margin-right: -1%;
-  }
-
-  .feature-section .title{
-    margin-right: -10%;
-  }
-
-}
-
-/*Azuz Zenbook Fold*/
-
-@media (max-width:853px){
-
-  .feature{
-    height: 50vh;
-   
-  }
-
-}
 
 
 
